# plasma-desktop-branding

./: README.md  meson.build
desktoptheme/: colors  meson.build  metadata.desktop
look-and-feel/: defaults  meson.build  metadata.desktop
plasma/: meson.build
plasma-desktop-branding/: meson.build
plasma-desktop-branding/usr/: meson.build
plasma-desktop-branding/usr/share/: meson.build
plasma-desktop-branding/usr/share/applications/: meson.build
plasma-desktop-branding/usr/share/color-schemes/: meson.build
plasma-desktop-branding/usr/share/plasma/: meson.build
plasma-desktop-branding/usr/share/plasma/desktoptheme/: meson.build
plasma-desktop-branding/usr/share/plasma/desktoptheme/solus-dark/: meson.build
plasma-desktop-branding/usr/share/plasma/look-and-feel/: meson.build
plasma-desktop-branding/usr/share/plasma/look-and-feel/solusdark.desktop/: meson.build
plasma-desktop-branding/usr/share/plasma/look-and-feel/solusdark.desktop/contents/: meson.build
plasma-desktop-branding/usr/share/plasma/look-and-feel/solusdark.desktop/contents/previews/: meson.build
plasma-desktop-branding/usr/share/plasma/wallpapers/: meson.build
plasma-desktop-branding/usr/share/plasma/wallpapers/SolusPlasma/: meson.build
plasma-desktop-branding/usr/share/plasma/wallpapers/SolusPlasma/contents/: meson.build
plasma-desktop-branding/usr/share/plasma/wallpapers/SolusPlasma/contents/images/: meson.build
plasma-desktop-branding/usr/share/sddm/: meson.build
plasma-desktop-branding/usr/share/sddm/sddm.conf.d/: meson.build
plasma-desktop-branding/usr/share/xdg/: meson.build
plasma-desktop-branding/usr/share/xdg/plasma-workspace/: meson.build
plasma-desktop-branding/usr/share/xdg/plasma-workspace/env/: meson.build
plasma/color-schemes/: SolusDark.colors
plasma/desktoptheme/: colors  meson.build
plasma/desktoptheme/solus-dark/: mesion.build
plasma/look-and-feel/: meson.build  org.kde.plasma.desktop-layout.js
plasma/look-and-feel/solusdark.desktop/: metadata.json
plasma/sddm-theme/: meson.build  metadata.desktop  theme.conf
plasma/wallpapers/: meson.build  metadata.desktop
sddm/: 20_plasma_config.conf
solus-desktoptheme/: meson.build
solus-desktoptheme.bak/layout-templates/: layout.js  metadata.json
solus-desktoptheme/Solus/desktoptheme/solus-light/: colors
solus-desktoptheme/SolusDark/: meson.build
solus-desktoptheme/SolusDark/desktoptheme/solus-dark/: colors  metadata.desktop
solus-desktoptheme/SolusDark/look-and-feel/SolusDark.desktop/: metadata.desktop  metadata.json
solus-desktoptheme/SolusDark/look-and-feel/solus-dark.desktop/: metadata.desktop  metadata.json
solus-desktoptheme/SolusDark/look-and-feel/solusdark.desktop/: metadata.json
solus-desktoptheme/color-schemes/: SolusDark.colors  SolusLight.colors
solus-desktoptheme/layout-templates/: metadata.desktop
wallpapers/SolusPlasma/: meson.build
wallpapers/SolusPlasma/contents/: meson.build
wallpapers/SolusPlasma/contents/images/: meson.build
xdg/: breezerc  kdeglobals  kglobalshortcutsrc  konsolerc  konversationrc  kwinrc  meson.build  plasma-org.kde.plasma.desktop-appletsrc  systemsettingsrc  touchpadxlibinputrc
