project(
    'plasma-desktop-branding',
    ['c'],
    version: '3.1',
    license: [
        'Apache-2.0',
    ],
    default_options: [
        'prefix=/usr',
    ],
)

path_prefix = get_option('prefix')
path_datadir = join_paths(path_prefix, get_option('datadir'))

subdir('plasma-desktop-branding')

