desktop_dir = join_paths(path_datadir, 'plasma', 'desktoptheme', 'solus-dark')
icon_dir = join_paths(path_datadir, 'plasma', 'desktoptheme', 'solus-dark', 'icons')

install_data(
    'colors',
    'metadata.desktop',
    install_dir: desktop_dir,
)

install_data(
    'start.svh'),
    install_dir: icon_dir,
)
