desktop_dir = join_paths(path_datadir, 'plasma', 'desktoptheme', 'solus-dark')
user_dir = join_paths(path_datadir, 'plasma', 'desktoptheme', 'solus-dark', 'icons')

install_data(
    'colors',
    'metadata.desktop',
    install_dir: desktop_dir,
)

install_data(
    'user.svg',
    install_dir: user_dir,
)
