# Install color-schemes
install_data('color-schemes/SolusDark.colors',
    install_dir: join_paths(path_datadir, 'color-schemes')
)

# Install desktoptheme
install_data(
    'desktoptheme/colors',
    'desktoptheme/metadata.desktop',
        install_dir: join_paths(path_datadir, 'plasma', 'desktoptheme', 'solus-dark')
)

# Install look and feel
install_data(
    'look-and-feel/metadata.desktop',
    'look-and-feel/metadata.json',
    install_dir: join_paths(path_datadir, 'plasma', 'look-and-feel', 'solusdark.desktop')
)
install_data('look-and-feel/defaults',
    install_dir: join_paths(path_datadir, 'plasma', 'look-and-feel', 'solusdark.desktop', 'contents')
)
install_data(
    'look-and-feel/fullscreenpreview.jpg',
    'look-and-feel/preview.png',
    install_dir: join_paths(path_datadir, 'plasma', 'look-and-feel', 'solusdark.desktop', 'contents', 'previews')
)

# Install wallpapers
install_data('wallpapers/metadata.desktop',
    install_dir: join_paths(path_datadir, 'wallpapers', 'SolusPlasma')
)

install_data('wallpapers/screenshot.jpg',
    install_dir: join_paths(path_datadir, 'wallpapers', 'SolusPlasma', 'contents')
)

install_data(
    'wallpapers/1366x768.jpg',
    'wallpapers/1920x1080.jpg',
    'wallpapers/2560x1440.jpg',
    'wallpapers/3200x1800.jpg',
    'wallpapers/3840x2160.jpg',
    'wallpapers/5120x2880.jpg',
    install_dir: join_paths(path_datadir, 'wallpapers', 'SolusPlasma', 'contents', 'images')
)
