# Install color-schemes
install_data(
    'color-schemes/SolusDark.colors',
    install_dir: join_paths(path_datadir, 'color-schemes')
)

#install Wallpapers
install_data(
    'wallpapers/1366x768.jpg',
    'wallpapers/1920x1080.jpg',
    'wallpapers/2560x1440.jpg',
    'wallpapers/3200x1800.jpg',
    'wallpapers/3840x2160.jpg',
    'wallpapers/5120x2880.jpg',
    install_dir: join_paths(path_datadir, 'wallpapers', 'SolusPlasma', 'contents', 'images')
)

subdir('SolusDark')
