desktop_dir = join_paths(path_datadir, 'plasma', 'desktoptheme', 'solus-dark')
dialogs_dir = join_paths(path_datadir, 'plasma', 'desktoptheme', 'solus-dark', 'dialogs')


install_data(
    'colors',
    'metadata.desktop',
    install_dir: desktop_dir,
)

install_data(
    'background.svg',
    install_dir: dialogs_dir,
)
