sddm_dir = join_paths(path_datadir, 'sddm', 'themes', 'breeze-SolusDark')
image_dir = join_paths(path_datadir, 'sddm', 'themes', 'breeze-SolusDark', 'components', 'artwork')

install_data(
    'metadata.desktop',
    'preview.png',
    'theme.conf',
    install_dir: sddm_dir,
)

install_data(
    'sddm_background.png',
    install_dir: image_dir,
)
