sddm_dir = join_paths(path_datadir, 'sddm', 'themes', 'breeze')
image_dir = join_paths(path_datadir, 'sddm', 'themes', 'breeze', 'components', 'artwork')

install_data(
    'metadata.desktop',
    'preview.png',
    'theme.conf',
    install_dir: sddm_dir,
)

install_data(
    'sddm_background.png',
    install_dir: image_dir,
)
