install_data(
    'baloofilerc',
    'breezerc',
    'dolphinrc',
    'katepartrc',
    'kcm-about-distrorc',
    'kcminputrc',
    'kded5rc',
    'kdeglobals',
    'klaunchrc',
    'klipperrc',
    'konversationrc',
    'kscreenlockerrc',
    'ksmserverrc',
    'ksplashrc',
    'kwinrc',
    'kwinrulesrc',
    'plasmarc',
    'spectaclerc',
)

subdir('plasma-workspace')
